<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".ui.FeedFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/new_feed"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:textColor="@color/app_dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/header_logo"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:src="@drawable/blog_logo"
        app:civ_border_color="@color/app_light_blue"
        app:civ_border_width="@dimen/_1sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/app_white" />

    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/header_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/search_here"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/recyclerViewFeed"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_94sdp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_feeds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addBlogFloatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="@dimen/_22sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:fitsSystemWindows="true"
        android:contentDescription="@string/create_feed"
        android:src="@drawable/ic_add"
        app:shapeAppearanceOverlay="@style/round"
        app:borderWidth="@dimen/_2sdp"
        android:clickable="true"
        app:elevation="@dimen/_10sdp"
        android:backgroundTint="@color/app_blue"
        app:tint="@color/app_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/app_black" />


</androidx.constraintlayout.widget.ConstraintLayout>